ten million IQ plays and a unique method of expanding offset-vector bounding boxes (can i have my nobel peace prize yet)